[package]
name = "day14"
version = "0.1.0"
authors = ["Jonathan Mayer <jonathan.mayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent = { path = "../advent" }
howlong = "0.1"
lazy_static = "1"
regex = "1"
