[package]
name = "day17"
version = "0.1.0"
authors = ["Jonathan Mayer <jonathan.mayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bitvector = "0.1"
#bitvec = "0.19"
twox-hash = "1"
fxhash = "0"
ahash = "0.6"
lazy_static = "1"

[dev-dependencies]
criterion = "0.3"

[features]
# if the hashset feature is used, exactly one of the hash-* features must also be specified.
hashset = []
hash-default = []
hash-xx = []
hash-fx = []
hash-a = []

[[bench]]
name = "benchmark"
harness = false


